Improvements to parallax: * Make icons clickable * Fix the grid * Tiny positioning adjustments

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@
   max-width: 940px;
 }
 
-#chapter-nav{position:absolute; right:0; top:185px; width:18px;}
+#chapter-nav{position:absolute; right:20px; top:170px; width:18px;}
 #chapter-nav li{float:left; width:100%; padding:0 0 5px; font-size:11px; line-height:18px; }
 #chapter-nav a{float:left; width:100%; height:18px; background:#d6dbe6; color:#fff; text-align:center; position:relative;}
 #chapter-nav a span{color:#999; position:absolute; width:150px; left:-162px; top:0; text-align:right; display:none; font-weight:bold;}
@@ -102,22 +102,21 @@
 
 
 .icons li {
+  list-style: none;
+}
+.icons a {
   position: absolute;
+  display: block;
+  width: 200px;
   background: url(../images/icon.png) no-repeat 50% 0%;
   padding: 50px 10px 0;
   text-align: center;
   font-size: 14px;
   font-weight: bold;
   line-height: 16px;
-  list-style: none;
-}
-.icons span {
-  display:block;
-  width:200px;
-}
-.icons a {
   color: #4e699b;
 }
+
 .icons a:hover {
   text-decoration: none;
 }
@@ -125,14 +124,6 @@
 .pointer{position:absolute; top:0px; left:0; height:1px; width:1px; visibility:hidden;}
 .map-block img{display:block; max-width: 100%;}
 
-
-.chapters-container {
-  width: 90%;
-  padding: 5%;
-  max-width: 940px;
-  margin: 0 auto;
-  position: relative;
-}
 
 .text-content {
   width: 300px;
@@ -143,6 +134,9 @@
   position: fixed;
   left: 50%;
   margin-left: 20px;
+}
+.right-aligned-text#chapter3-text {
+  padding-top: 30px;
 }
 
 .section-text.gom {
@@ -294,62 +288,62 @@ img#img-16.visa {
   margin-left: 0;
 }
 
-li.i-1{
+li.i-1 a {
   left: -200px;
   top: 0;
   background-image: url(../images/icons/icon_60x60_slitstark.png);
 }
-li.i-2{
+li.i-2 a {
   left: -150px;
   top: -130px;
   background-image: url(../images/icons/icon_60x60_latt.png);
 }
-li.i-3{
+li.i-3 a {
   left: -70px;
   top: -50px;
   background-image: url(../images/icons/icon_60x60_anpassningsbar.png);
 }
-li.i-4{
+li.i-4 a {
   left: 40px;
   top: -155px;
   background-image: url(../images/icons/icon_60x60_brandsaker.png);
 }
-li.i-5{
+li.i-5 a {
   left: 50px;
   top: -10px;
   background-image: url(../images/icons/icon_60x60_vaderbestandig.png);
 }
-li.i-6{
+li.i-6 a {
   left: 150px;
   top: -100px;
   background-image: url(../images/icons/icon_60x60_temperaturoberoende.png);
 }
-li.i-7{
+li.i-7 a {
   left: 200px;
   top: 15px;
   background-image: url(../images/icons/icon_60x60_resistent_mot_olja_och_kemikalier.png);
 }
-li.i-8{
+li.i-8 a {
   left: -200px;
   top: 180px;
   background-image: url(../images/icons/icon_60x60_ergonomisk.png);
 }
-li.i-9{
+li.i-9 a {
   left: -140px;
   top: 260px;
   background-image: url(../images/icons/icon_60x60_insektsfri.png);
 }
-li.i-10{
+li.i-10 a {
   left: -50px;
   top: 235px;
   background-image: url(../images/icons/icon_60x60_hygienisk.png);
 }
-li.i-11{
+li.i-11 a {
   left: 70px;
   top: 210px;
   background-image: url(../images/icons/icon_60x60_absorberar_inte_olja.png);
 }
-li.i-12{
+li.i-12 a {
   left: 200px;
   top: 160px;
   background-image: url(../images/icons/icon_60x60_atervinningsbar.png);
@@ -362,37 +356,37 @@ li.i-12{
   top: 200px;
 }
 
-li.i-13 {
+li.i-13 a {
   left: 0px;
   top: -130px;
   background-image: url(../images/icons/icon_60x60_lag_livscykelkostnad.png);
 }
-li.i-14 {
+li.i-14 a {
   left: 110px;
   top: -155px;
   background-image: url(../images/icons/icon_60x60_utbytbara_detaljer.png);
 }
-li.i-15 {
+li.i-15 a {
   left: 275px;
   top: -135px;
   background-image: url(../images/icons/icon_60x60_slitstark.png);
 }
-li.i-16 {
+li.i-16 a {
   left: 345px;
   top: -60px;
   background-image: url(../images/icons/icon_60x60_oberoende_av_mattstandard.png);
 }
-li.i-17 {
+li.i-17 a {
   left: 20px;
   top: 220px;
   background-image: url(../images/icons/icon_60x60_brandsaker.png);
 }
-li.i-18 {
+li.i-18 a {
   left: 160px;
   top: 200px;
   background-image: url(../images/icons/icon_60x60_atervinningsbar.png);
 }
-li.i-19 {
+li.i-19 a {
   left: 290px;
   top: 180px;
   background-image: url(../images/icons/icon_60x60_ergonomisk.png);
@@ -404,27 +398,27 @@ li.i-19 {
   top: 270px;
 }
 
-li.i-20 {
+li.i-20 a {
   left: -20px;
   top: 5px;
   background-image: url(../images/icons/icon_60x60_latt.png);
 }
-li.i-21 {
+li.i-21 a {
   left: 80px;
   top: -60px;
   background-image: url(../images/icons/icon_60x60_greppvanlig.png);
 }
-li.i-22 {
+li.i-22 a {
   left: 250px;
   top: -100px;
   background-image: url(../images/icons/icon_60x60_dammar_ej.png);
 }
-li.i-23 {
+li.i-23 a {
   left: 330px;
   top: -20px;
   background-image: url(../images/icons/icon_60x60_damm_flis_och_spagfri.png);
 }
-li.i-24 {
+li.i-24 a {
   left: 210px;
   top: 190px;
   background-image: url(../images/icons/icon_60x60_spikar_och_skruvar.png);
@@ -439,22 +433,22 @@ li.i-24 {
   opacity: 1;
 }
 
-li.i-25 {
+li.i-25 a {
   left: 50px;
   top: -100px;
   background-image: url(../images/icons/icon_60x60_hallbar.png);
 }
-li.i-26 {
+li.i-26 a {
   left: 170px;
   top: -70px;
   background-image: url(../images/icons/icon_60x60_motstandskraftig.png);
 }
-li.i-27 {
+li.i-27 a {
   left: 310px;
   top: -55px;
   background-image: url(../images/icons/icon_60x60_atervinningsbar.png);
 }
-li.i-28 {
+li.i-28 a {
   left: 230px;
   top: 190px;
   background-image: url(../images/icons/icon_60x60_rent_vardefullt_stalskrot.png);
@@ -502,13 +496,6 @@ iframe#maps-iframe {
 }
 
 
-/*.icon-arrow-right {
-  background: url(../images/arrow_right.png);
-  width:12px;
-  height:15px;
-  margin-left:10px;
-  margin-top:2px;
-}*/
 .thumbnail {
   border:none 0px;
   padding:0px;
